# actix-web-practice

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html
http_server/: Cargo.toml
http_server/src/: index.html  main.rs
request_handler/: Cargo.toml
request_handler/src/: main.rs
src/: main.rs
ssl/: Cargo.toml  key.pem
ssl/src/: main.rs
test_dir/src/: main.rs
