[package]
name = "http_server"
version = "0.1.0"
authors = ["Index197511 <hiro.saten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0", features = ["ssl"] }
openssl = { version = "0.10" }
actix-rt = "0.2.6"
