[package]
name = "ssl"
version = "0.1.0"
authors = ["Index197511 <hiro.saten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2"
actix-web = { version="1.0.0", features=["ssl"] }
env_logger = "0.6"
openssl = { version="0.10" }
